Mis à jour pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>fr.afcepf.atod</groupId>
 		<artifactId>Wine-Parent</artifactId>
 		<version>1.0.0</version>
+		<relativePath>../Wine-Parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>Wine-Entity</artifactId>
 	<packaging>jar</packaging>
